[package]
name = "gameboy"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

[features]
default = ["gui"]
gui = ["minifb", "cpal"]
tty = ["blockish", "crossterm", "crossterm_input"]

[dependencies]
argparse = "0.2"
blip_buf = "0.1"
blockish = { version = "0.0.8", optional = true }
cpal = { version = "0.8", optional = true }
crossterm = { version = "0.15", optional = true }
crossterm_input = { version = "0.5", optional = true }
minifb = { version = "0.11", optional = true }
rog = "0.1"
